<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".RegistroActivity">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_el_nombre" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_reppassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repetir_password"
        android:inputType="textPassword" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_masculino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/rb_femenino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/femenino" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_cine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cine" />

            <CheckBox
                android:id="@+id/cb_gimnasio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gimnasio" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_leer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leer" />

            <CheckBox
                android:id="@+id/cb_series"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/series" />
        </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_nacimiento"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/tv_showPicker"/>

    <Button
        android:id="@+id/bt_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="16sp" />


</LinearLayout>